Adding ppc64le architecture support on travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ python:
     - pypy3
 services:
     - docker
+arch:
+  - amd64
+  - ppc64le
 
 cache:
     apt: true
@@ -59,6 +62,7 @@ after_success:
 env:
     global:
         - JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+        - if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then export JAVA_HOME=$HOME/openjdk11; fi
     jobs:
         - DJANGO_VERSION=">=2.2,<3.0" VERSION_ES=">=1,<2"
         - DJANGO_VERSION=">=3.0,<3.1" VERSION_ES=">=1,<2"
