--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ python:
 services:
     - docker
 arch:
-  - amd64
   - ppc64le
 
 cache:
@@ -61,7 +60,7 @@ after_success:
 
 env:
     global:
-        - JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64;/usr/lib/jvm/java-8-openjdk-ppc64el
+        - if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then JAVA_HOME=/usr/lib/jvm/java-8-openjdk-ppc64el; fi
     jobs:
         - DJANGO_VERSION=">=2.2,<3.0" VERSION_ES=">=1,<2"
         - DJANGO_VERSION=">=3.0,<3.1" VERSION_ES=">=1,<2"
