--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ after_success:
 
 env:
     global:
-        - if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then JAVA_HOME=/usr/lib/jvm/java-8-openjdk-ppc64el; fi
+        - if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then JAVA_HOME=/usr/lib/jvm/java-8-openjdk-ppc64el; else JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64; fi
     jobs:
         - DJANGO_VERSION=">=2.2,<3.0" VERSION_ES=">=1,<2"
         - DJANGO_VERSION=">=3.0,<3.1" VERSION_ES=">=1,<2"
